Fix feature label size on small display
Plus no overflow on title on tiny displays and navigate to booking when
book now is clicked

--- a/core/less/globalCSS.less
+++ b/core/less/globalCSS.less
@@ -131,6 +131,8 @@ body {
     color:#777;
     font-size: 28px;
     line-height: 28px;
+    overflow: hidden;
+    white-space: nowrap;
     i{
         margin-left: 8px;
     }
