--- a/rooms/less/roomsStyling.less
+++ b/rooms/less/roomsStyling.less
@@ -308,6 +308,14 @@
                     z-index: 3;
                 }
             }
+            .facilitiesCheckbox{
+                @media (max-width:450px){
+                    font-size:3.2vw;
+                }
+                @media (max-width:350px){
+                    font-size:0vw;
+                }
+            }
             
             .custom-glyphicon{
                 margin: 0 auto 3px;
